WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210340
mayContainEditableElementsInRect() can terminate search once the search rect is wholly contained inside a layer
https://bugs.webkit.org/show_bug.cgi?id=210340
Summary
mayContainEditableElementsInRect() can terminate search once the search rect ...
Daniel Bates
Reported
2020-04-10 09:00:39 PDT
If the search rect does not contain any editable elements and is wholly contained inside a layer then the search can terminate: there are no editable elements in the rect. Doing so is not only an efficiency win, but reduces the false positive rate of mayContainEditableElementsInRect().
Attachments
Patch
(3.92 KB, patch)
2020-04-10 09:11 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch
(6.04 KB, patch)
2020-04-10 09:23 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch
(6.12 KB, patch)
2020-04-10 09:25 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch
(6.14 KB, patch)
2020-04-10 09:26 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2020-04-10 09:11:07 PDT
Created
attachment 396091
[details]
Patch
Daniel Bates
Comment 2
2020-04-10 09:23:35 PDT
Created
attachment 396092
[details]
Patch
Daniel Bates
Comment 3
2020-04-10 09:25:50 PDT
Created
attachment 396093
[details]
Patch
Daniel Bates
Comment 4
2020-04-10 09:26:45 PDT
Created
attachment 396094
[details]
Patch
Daniel Bates
Comment 5
2020-04-10 12:29:06 PDT
Comment on
attachment 396094
[details]
Patch Clearing flags on attachment: 396094 Committed
r259889
: <
https://trac.webkit.org/changeset/259889
>
Daniel Bates
Comment 6
2020-04-10 12:29:08 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2020-04-10 12:30:13 PDT
<
rdar://problem/61598356
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug