mayContainEditableElementsInRect() can terminate search once the search rect is wholly contained inside a layer https://bugs.webkit.org/show_bug.cgi?id=210340

Reviewed by Simon Fraser.

Source/WebKit:

Reduce false positives. This makes mayContainEditableElementsInRect() return false when the
search rect is wholly contained inside a higher paint order layer with no editable elements
that overlaps a layer with editable elements.

* UIProcess/RemoteLayerTree/ios/RemoteLayerTreeViews.mm:
(WebKit::mayContainEditableElementsInRect):

LayoutTests:

Update test and test results. Add "will-transform: transform" to more strongly hint
to the engine to create a compositing layer for the overlapping element in the
composting sub-test.

* editing/editable-region/hit-test-overlap-expected.txt:
* editing/editable-region/hit-test-overlap.html:

Canonical link: https://commits.webkit.org/223243@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259889 268f45cc-cd09-0410-ab3c-d52691b4dbfc